# telegram-template

./: .gitignore  Dockerfile  Makefile  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
db/: User.py  __init__.py
translations/: get_phrase.py
translations/strings/: strings.en.yaml  strings.ru.yaml
utils/: login_requied.py  ytdlp_wrapper.py
